// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases Render check 1`] = `
<DocumentFragment>
  <header
    class="css-1o9x2ib"
  >
    FoodTruck
  </header>
</DocumentFragment>
`;

exports[`Logo test cases Render with custom size 1`] = `
<DocumentFragment>
  <header
    class="css-1lpr8zk"
    size="10"
  >
    FoodTruck
  </header>
</DocumentFragment>
`;
